@@ -6,6 +6,7 @@ Added: support for remote protocol to pass parameter information
 Fixed: TextReporter logs information about the parameters of the test methods
 Fixed: concurrency issue in JUnitXMLReporter
 Fixed: output of JUnitXMLReporter must be CDATA
+Fixed: XML unsupported annotations/parallel attribute values are reported
 
 ===========================================================================
 5.3
